# natvis_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: foo.h
natvis_file/: file.natvis
src/: foo.cpp  main.cpp
